# sator-solana-contracts

./: .gitignore  Cargo.toml  README.md  deploy.md  sator_reward-keypair.json  sator_stake_viewer-keypair.json  solana-wallet-safety-guide.md
assets/: sao.json
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/borsh/de/: trait.BorshDeserialize.js
doc/implementors/borsh/schema/: trait.BorshSchema.js
doc/implementors/borsh/ser/: trait.BorshSerialize.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/convert/: trait.Into.js
doc/implementors/core/default/: trait.Default.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/num_traits/cast/: trait.ToPrimitive.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/sator_reward/: all.html  fn.check_id.html  fn.id.html  fn.program_id.html  index.html  sidebar-items.js  static.ID.html
doc/sator_reward/errors/: enum.Error.html  index.html
doc/sator_reward/instruction/: enum.Instruction.html  fn.claim.html  fn.initialize_quiz.html  fn.initialize_show.html  fn.initialize_viewer.html  index.html  sidebar-items.js  struct.InitializeQuizInput.html  struct.InitializeShowInput.html  struct.InitializeViewerInput.html  struct.WinnerInput.html
doc/sator_reward/state/: index.html  sidebar-items.js  struct.Quiz.html  struct.Show.html  struct.Viewer.html
doc/sator_reward/types/: index.html  sidebar-items.js  struct.Winner.html
doc/sator_stake_viewer/: all.html  fn.check_id.html  fn.id.html  fn.stake_viewer_program_id.html  index.html  sidebar-items.js  static.ID.html
doc/sator_stake_viewer/errors/: enum.Error.html  index.html
doc/sator_stake_viewer/instruction/: enum.Instruction.html  fn.initialize_stake_pool.html  fn.stake.html  fn.unstake.html  index.html  sidebar-items.js  struct.InitializeStakePoolInput.html  struct.StakeInput.html
doc/sator_stake_viewer/state/: index.html  sidebar-items.js  struct.ViewerStake.html  struct.ViewerStakePool.html
doc/sator_stake_viewer/types/: index.html  sidebar-items.js  struct.Rank.html
doc/src/sator_reward/: errors.rs.html  instruction.rs.html  lib.rs.html  processor.rs.html  state.rs.html  types.rs.html
doc/src/sator_stake_viewer/: errors.rs.html  instruction.rs.html  lib.rs.html  processor.rs.html  state.rs.html  types.rs.html
sator-cli/: Cargo.toml
sator-cli/src/: main.rs
sator-reward/cli/: Cargo.toml
sator-reward/cli/src/: main.rs
sator-reward/program/: Cargo.toml
sator-reward/program/src/: entrypoint.rs  errors.rs  instruction.rs  instructions.rs  lib.rs  processor.rs  state.rs  tests.rs  tests_helpers.rs  transactions.rs  types.rs
sator-sdk/: Cargo.toml
sator-sdk-test/: Cargo.toml
sator-sdk-test/src/: lib.rs  spl_transactions.rs
sator-sdk/src/: invoke.rs  lib.rs  program.rs  spl_invoke.rs  state.rs  types.rs
src/: Cargo.toml
src/cli/src/: main.rs
src/doc/: crates.js  settings.html  source-files.js
src/doc/implementors/borsh/ser/: trait.BorshSerialize.js
src/doc/implementors/core/clone/: trait.Clone.js
src/doc/implementors/core/cmp/: trait.PartialEq.js
src/doc/implementors/core/fmt/: trait.Debug.js
src/doc/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Unpin.js
src/doc/sator_stake_viewer/: fn.id.html  fn.program_id.html  static.ID.html
src/doc/sator_stake_viewer/error/: enum.Error.html  index.html
src/doc/sator_stake_viewer/instruction/: enum.Instruction.html  fn.initialize_stake.html  fn.unlock.html  sidebar-items.js
src/doc/sator_stake_viewer/state/: struct.ViewerLock.html  struct.ViewerStake.html
src/doc/src/sator_stake_viewer/: instruction.rs.html  lib.rs.html  processor.rs.html  types.rs.html
src/doc/src/sator_stake_viewer/sdk/: borsh.rs.html  invoke.rs.html
src/program/: Cargo.toml  README.md
src/program-rust/: Cargo.toml  README.md
src/program-rust/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  spl_transactions.rs  state.rs  test_helpers.rs  tests.rs  transactions.rs  types.rs
src/program-rust/src/sdk/: invoke.rs  mod.rs  program.rs  types.rs
src/program/src/: entrypoint.rs  error.rs  errors.rs  instruction.rs  lib.rs  processor.rs  spl_transactions.rs  state.rs  tests.rs  tests_helpers.rs  transactions.rs  types.rs
src/program/src/sdk/: borsh.rs  invoke.rs  program.rs  types.rs
stake-viewer/cli/: Cargo.toml
stake-viewer/cli/src/: main.rs
stake-viewer/doc/: search-index.js
stake-viewer/doc/implementors/borsh/de/: trait.BorshDeserialize.js
stake-viewer/doc/implementors/borsh/schema/: trait.BorshSchema.js
stake-viewer/doc/implementors/core/convert/: trait.Into.js
stake-viewer/doc/implementors/core/default/: trait.Default.js
stake-viewer/doc/implementors/core/marker/: trait.Freeze.js  trait.Sync.js
stake-viewer/doc/implementors/num_traits/cast/: trait.ToPrimitive.js
stake-viewer/doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
stake-viewer/doc/sator_stake_viewer/: all.html  fn.check_id.html  index.html  sidebar-items.js
stake-viewer/doc/sator_stake_viewer/instruction/: fn.lock.html  index.html  struct.InitializeStakeInput.html  struct.LockInput.html  struct.UnlockInput.html
stake-viewer/doc/sator_stake_viewer/state/: enum.StateVersion.html  index.html  sidebar-items.js
stake-viewer/doc/sator_stake_viewer/types/: index.html  sidebar-items.js  struct.Ranks.html
stake-viewer/doc/src/sator_stake_viewer/: error.rs.html  state.rs.html
stake-viewer/doc/src/sator_stake_viewer/sdk/: mod.rs.html  program.rs.html  types.rs.html
stake-viewer/js/: cli.ts
stake-viewer/program/: Cargo.toml  README.md  mbox.md  owner.json  syntetix.md
stake-viewer/program/src/: entrypoint.rs  errors.rs  instruction.rs  lib.rs  processor.rs  spl_transactions.rs  state.rs  tests.rs  tests_helpers.rs  transactions.rs  types.rs
