[package]
name = "sator-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.2" }
solana-client-helpers = "1.0"

serde_json = "1.0.61"
solana-account-decoder = "1.8.5"
solana-clap-utils = "1.8.5"
solana-cli-config = "1.8.5"
solana-client = "1.8.5"
solana-logger = "1.8.5"
solana-sdk = "1.8.5"
solana-program = "1.8.5"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = {version = "0.0.1", features = [ "no-entrypoint" ] }