[package]
name = "sator-sdk-test"
version = "0.1.0"
edition = "2018"


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
bs58 = "*"
solana-program = "=1.7.8"
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
fixed = "1.9.0"
solana-sdk = { version =  "=1.7.8"}
solana-program-test = {version = "=1.7.8" }
assert_matches = "1.4.0"
solana-validator = "1.7.6"
bincode = "*"
sator-sdk = { path="../sator-sdk",  features = [ "no-entrypoint" ]  }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]