
[package]
name = "sator-reward"
version = "0.0.1"
description = "Solana contract for for sator rewards"
edition = "2018"

[features]
default = ["test-bpf"]
test-bpf = []
no-entrypoint = []


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
bs58 = "*"
solana-program = "=1.7.8"
sator-sdk = { path="../../sator-sdk",  features = [ "no-entrypoint" ]  }
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ], rev = "bcbed37faba7f5a67303027d1cd765b52e96ff8e" }
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
fixed = "1.9.0"

[dev-dependencies]
solana-program-test = "=1.7.8"
solana-sdk = "=1.7.8"
assert_matches = "1.4.0"
solana-validator = "1.7.6"
bincode = "*"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]