
[package]
name = "sator-stake-viewer"
version = "0.0.1"
description = "Solana contract for stacking viewer tokens"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
bs58 = "*"
solana-program = "=1.7.6"
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "=1.7.6"
solana-sdk = "=1.7.6"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
