
[package]
name = "sator-stake-viewer"
version = "0.0.1"
description = "Solana contract for stacking viewer tokens"
edition = "2018"

[features]
default = ["test-bpf"]
test-bpf = []
no-entrypoint = []


[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
bs58 = "*"
solana-program = "=1.7.6"
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
solana-program-test = "=1.7.6"
solana-sdk = "=1.7.6"
assert_matches = "1.4.0"
solana-validator = "1.7.6"
solana-client-helpers = "1.0"
bincode = "*"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]