[package]
name = "sator-stake-viewer-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.2" }
solana-client-helpers = "1.0"

serde_json = "1.0.61"
solana-account-decoder = "1.7.6"
solana-clap-utils = "1.7.6"
solana-cli-config = "1.7.6"
solana-client = "1.7.6"
solana-logger = "1.7.6"
solana-sdk = "1.7.6"
solana-program = "1.7.6"
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ], rev = "bcbed37faba7f5a67303027d1cd765b52e96ff8e" }
sator-stake-viewer = { path="../program", features = [ "no-entrypoint" ] }
sator-sdk = { path="../../sator-sdk",  features = [ "no-entrypoint" ]  }
sator-sdk-test = { path="../../sator-sdk-test"  }
